--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <script src="assets/js/angular.min.js"></script>
     <script src="assets/js/angular-ui-router.min.js"></script>
+    <script src="assets/js/angular-animate.js"></script>
     <!--<script src="assets/js/angular-route.js"></script>-->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/ui-bootstrap-tpls-1.3.2.js"></script>
 
 
     <script type="text/javascript" src="javascript/app.js"></script>
@@ -19,11 +21,10 @@
     <script type="text/javascript" src="javascript/controllers/LocationController.js"></script>
     <script type="text/javascript" src="javascript/controllers/UserController.js"></script>
 
-
 </head>
 <body>
 <div class="container">
-    <h3>Vertical Pills</h3>
+    <h3></h3>
     <div class="row">
         <div class="col-md-2">
             <section ng-controller="PanelController as panel">
