applied directive for bootstrap modal

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script type="text/javascript" src="javascript/app.js"></script>
     <script type="text/javascript" src="javascript/route.js"></script>
+    <script type="text/javascript" src="javascript/directives/projectDirective.js"></script>
     <script type="text/javascript" src="javascript/controllers/EquipmentController.js"></script>
     <script type="text/javascript" src="javascript/controllers/MaterialController.js"></script>
     <script type="text/javascript" src="javascript/controllers/LocationController.js"></script>
